--- a/src/assets/all.css
+++ b/src/assets/all.css
@@ -93,6 +93,10 @@ html {
   min-height: 500px;
 }
 
+.table-list {
+  z-index: 2;
+}
+
 .main-container .table-list table {
   position: relative !important;
 }
@@ -113,6 +117,17 @@ html {
     min-width: 0px;
   }
 
+  .main-container header nav {
+    flex-direction: column !important;
+  }
+
+  .main-container header nav div {
+    gap: 0px !important;
+    width: 100%;
+    justify-content: space-between;
+    flex-direction: row-reverse !important;
+  }
+
   .main-container {
     width: auto;
   }
@@ -125,13 +140,17 @@ html {
     width: 100%;
   }
 
+  .modal-content {
+    width: 95% !important;
+  }
+
   .table-list {
     min-height: 300px;
     max-height: 300px;
   }
 
   body {
-    padding: 15px;
+    padding: 10px;
   }
 }
 
@@ -145,15 +164,17 @@ html {
   border-bottom: 1px solid white;
 }
 
-.main-container header nav form {
+.main-container header nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 12px;
   width: 100%;
+  gap: 10px;
+  flex-wrap: nowrap;
+  justify-content: space-between;
 }
 
-.main-container header nav form input {
+.main-container header nav input {
   width: 100%;
   font-family: Varela Round, sans-serif;
   background-color: #c2c4ff21 !important;
@@ -166,11 +187,52 @@ html {
   background-color: #c2c4ff21 !important;
 }
 
-.main-container header nav div form button {
-  border: 1px solid rgb(18, 180, 132) !important;
+.main-container header nav button {
   padding: 5px 20px;
   cursor: pointer;
   border-radius: 4px;
+  background-color: transparent;
+}
+
+.modal {
+  width: 100%;
+  height: 100%;
+}
+
+.modal-dialog {
+  height: 100%;
+  padding: 0px;
+  margin: 0px !important;
+  display: flex;
+  max-width: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  width: 600px;
+  height: 600px;
+}
+
+.main-container header nav .btn-search {
+  border: 1px solid rgb(18, 180, 132) !important;
+  color: rgb(18, 180, 132) !important;
+}
+
+.main-container header nav .btn-search:hover {
+  color: rgb(255, 255, 255) !important;
+  background-color: rgb(18, 180, 132);
+}
+
+.main-container header nav .btn-add {
+  border: 1px solid rgb(40, 133, 255) !important;
+  color: rgb(40, 133, 255) !important;
+}
+
+.main-container header nav .btn-add:hover {
+  background-color: rgb(40, 133, 255);
+  color: rgb(255, 255, 255) !important;
 }
 
 .btn-loggout {
