--- a/src/assets/all.css
+++ b/src/assets/all.css
@@ -7,6 +7,8 @@
   box-sizing: border-box;
 }
 
+.mce-notification {display: none !important;}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
