--- a/src/assets/all.css
+++ b/src/assets/all.css
@@ -7,6 +7,11 @@
   box-sizing: border-box;
 }
 
+.mce-notification, 
+.tox-notifications-container {
+  display: none !important;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
