--- a/src/assets/all.css
+++ b/src/assets/all.css
@@ -23,7 +23,8 @@
   text-align: initial;
 }
 
-.input-group > *, input {
+.input-group > *,
+input {
   border: none !important;
   box-shadow: none !important;
 }
