--- a/src/assets/sass/layout/_variables.scss
+++ b/src/assets/sass/layout/_variables.scss
@@ -3,7 +3,6 @@ $white: rgb(255, 255, 255);
 $dark: rgb(0, 0, 0);
 $blue: rgb(0, 89, 255);
 
-// custom
 $container-bg: #c2c4ff21;
 $background: #161a27;
 $circles-bg: rgba(255, 255, 255, 0.2);
@@ -11,3 +10,11 @@ $modal-content: #252a38;
 $modal-text: #3a3f4e;
 $modal-input-bg: #c2c4ff21;
 $input-placeholder: #ffffff7a;
+$active_bg_scrollbar: #3e4452;
+$border_ql_editor: #ffffff70;
+$bg_ql_editor: #1d212b;
+$toolbar_stroke_ql_editor: #6b7a91;
+$bg_toolbar_options: #4c5367;
+$toolbar_options_hover: #646c86;
+$bg_table_sticky: #35394c;
+$inner_border_table: #ffffff21;
