--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -4,8 +4,20 @@
     left: 0px;
     height: 45px;
     width: 45px;
+    border-radius: 50%;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+@media (max-width: 600px) {
+    .btn-loggout {
+       position: relative;
+       margin: 0px;
+       border-radius: 4px;
+       height: 40px;
+    }
 }
