--- a/src/assets/sass/components/_dashboard.scss
+++ b/src/assets/sass/components/_dashboard.scss
@@ -4,10 +4,21 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    height: auto;
+    height: 100%;
     width: 100%;
 
     .main-title {
         font-family: Rubik Moonrocks, cursive;
+    }
+}
+
+@media (max-width: 600px) {
+    .container-home {
+        height: auto;
+        margin-top: 1rem;
+
+        .main-title {
+            font-size: 3rem;
+        }
     }
 }
