--- a/src/assets/sass/components/_footer.scss
+++ b/src/assets/sass/components/_footer.scss
@@ -1,7 +1,7 @@
 footer.footer-container {
     position: absolute;
     bottom: 0px;
-    margin-bottom: 1rem;
+    margin: 1rem 0px;
 }
 
 @media (max-width: 600px) {
