--- a/src/assets/sass/components/_init.scss
+++ b/src/assets/sass/components/_init.scss
@@ -1,11 +1,2 @@
-@import 
-    'background', 
-    'body', 
-    'buttons', 
-    'inputs', 
-    'modals', 
-    'auth', 
-    'dashboard', 
-    'table',
-    'footer',
+@import 'background', 'buttons', 'inputs', 'modals', 'auth', 'dashboard', 'table', 'footer',
     'quillEditor';
