--- a/src/assets/sass/components/_table.scss
+++ b/src/assets/sass/components/_table.scss
@@ -24,7 +24,7 @@
         }
 
         .input-search::placeholder {
-            color: gray;
+            color: $input-placeholder;
         }
     }
 
@@ -50,7 +50,7 @@
 
     .table-list table thead .sticky-scroll {
         top: -1px;
-        background-color: #35394c;
+        background-color: $bg_table_sticky;
     }
 
     .table-list table thead > tr > th {
@@ -64,7 +64,7 @@
     .table > :not(caption) > * > * {
         padding: .8rem;
         background-color: transparent;
-        border-bottom: 1px solid #ffffff21;
+        border-bottom: 1px solid $inner_border_table;
         box-shadow: inset 0 0 0 9999px transparent;
         vertical-align: middle;
         color: $white;
