--- a/src/assets/sass/layout/_scrollbar.scss
+++ b/src/assets/sass/layout/_scrollbar.scss
@@ -24,5 +24,5 @@
 
 *::-webkit-scrollbar-thumb:hover,
 *::-webkit-scrollbar-thumb:active {
-    background-color: #3e4452;
+    background-color: $active_bg_scrollbar;
 }
